fix for logging to stdout only