@@ -5,6 +5,9 @@ FROM solr:9.4.1-slim
 USER root
 
 ENV SOLR_HOME=/var/solr/data
+ENV LOG4J_PROPS=/opt/geonorge/log4j2-stdout.xml
+ENV SOLR_REQUESTLOG_ENABLED=false
+ENV GC_LOG_OPTS="-Xlog:gc*:stdout:time,uptime"
 
 COPY --from=solr-modules --chown=0:0 /opt/solr/modules/extraction /opt/solr/modules/extraction
 COPY --from=solr-modules --chown=0:0 /opt/solr/modules/clustering /opt/solr/modules/clustering
@@ -12,6 +15,7 @@ COPY --from=solr-modules --chown=0:0 /opt/solr/modules/langid /opt/solr/modules/
 COPY --from=solr-modules --chown=0:0 /opt/solr/modules/gcs-repository /opt/solr/modules/gcs-repository
 
 COPY --chown=0:0 docker/init-solr-home.sh /docker-entrypoint-initdb.d/10-init-solr-home.sh
+COPY --chown=0:0 docker/log4j2-stdout.xml /opt/geonorge/log4j2-stdout.xml
 COPY --chown=0:0 solr/ /opt/geonorge/solr-home/
 COPY --chown=0:0 docker/seed-data/ /opt/geonorge/seed-data/
 
